# rag-poc

./: .gitignore  README.md
apps/offline/: Makefile  main.py  pyproject.toml
apps/offline/configs/: collect_apple_notes_data.yaml  collect_notion_data.yaml  compute_rag_vector_index_openai_parent.yaml  etl.yaml  etl_apple_notes.yaml  etl_notion.yaml  generate_dataset.yaml
apps/offline/pipelines/: __init__.py  collect_apple_notes_data.py  collect_notion_data.py  compute_rag_vector_index.py  etl.py  etl_apple_notes.py  etl_notion.py  generate_dataset.py
apps/offline/src/offline/: config.py  utils.py
apps/offline/src/offline/application/agents/: __init__.py  contextual_summarization.py  quality.py  summarization.py
apps/offline/src/offline/application/dataset/: __init__.py  generators.py
apps/offline/src/offline/application/rag/: embeddings.py  retrievers.py  splitters.py
apps/offline/src/offline/domain/: __init__.py  dataset.py  document.py
apps/offline/src/offline/infrastructure/apple_notes/: __init__.py  service.py
apps/offline/src/offline/infrastructure/mongo/: __init__.py  indexes.py  service.py
apps/offline/src/offline/infrastructure/notion/: __init__.py  database.py  document.py
apps/offline/steps/collect_apple_notes_data/: __init__.py  extract_apple_notes_documents.py
apps/offline/steps/collect_notion_data/: __init__.py  extract_notion_documents.py  extract_notion_documents_metadata.py
apps/offline/steps/computer_rag_vector_index/: __init__.py  chunk_embed_load.py  filter_by_quality.py
apps/offline/steps/etl/: __init__.py  add_quality_score.py
apps/offline/steps/generate_dataset/: __init__.py  create_histograms.py  generate_summary_dataset.py
apps/offline/steps/infrastructure/: __init__.py  fetch_from_mongodb.py  ingest_to_mongodb.py  push_to_huggingface.py  read_documents_from_disk.py  save_dataset_to_disk.py  save_documents_to_disk.py
apps/offline/tools/: call_hf_dedicated_endpoint.py  run.py
apps/online/: Makefile  main.py  pyproject.toml
apps/online/src/online/: config.py  opik_utils.py
apps/online/src/online/application/agents/: __init__.py  agents.py
apps/online/src/online/application/evaluation/: __init__.py  evaluate.py  (+1 more)
apps/online/tools/: app.py  evaluate_app.py
(+8 files in other folders)
