[project]
name = "offline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apple-notes-to-sqlite>=0.1",
    "click>=8.1.3",
    "crawl4ai>=0.3.745",
    "datasets>=3.6.0",
    "langchain>=0.3.25",
    "langchain-huggingface>=0.2.0",
    "langchain-mongodb>=0.6.2",
    "langchain-openai>=0.3.16",
    "loguru>=0.7.3",
    "markdownify>=1.1.0",
    "matplotlib>=3.10.3",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.12.1",
    "zenml[server]==0.73.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/offline"]
