[project]
name = "online"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.12.0",
    "langchain-huggingface>=0.2.0",
    "langchain-mongodb>=0.6.2",
    "langchain-openai>=0.3.17",
    "loguru>=0.7.3",
    "opik>=1.7.22",
    "smolagents==1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/online"]
